<resources>
    <string name="app_name">Эко-Маркет</string>
    <string name="main_page">Главная</string>
    <string name="basket">Корзина</string>
    <string name="history">История</string>
    <string name="information">Инфо</string>
    <string name="products">Продукты</string>
    <string name="add">Добавить</string>
    <string name="hint_quick_search">Быстрый поиск</string>
    <string name="all">Все</string>
    <string name="fructs">Фрукты</string>
    <string name="suhofructs">Сухофрукты</string>
    <string name="Vegetables">Овощи</string>
    <string name="tea_coffee">Чай и кофе</string>
    <string name="Greens">Зелень</string>
    <string name="milkProduct">Молочные изделия</string>
    <string name="placeAnOrder">Оформить заказ</string>
    <string name="no_result">Ничего не нашли</string>
    <string name="clear">Очистить</string>
    <string name="you_dont_have_order">У вас нет заказа</string>
    <string name="navogate_to_shop">Перейти в магазин</string>
    <string name="info_page_main_text">Фрукты, овощи, зелень, сухофрукты а так же сделанные из натуральных ЭКО продуктов (варенье, салаты, соления, компоты и т.д.) можете заказать удобно, качественно и по доступной цене.Готовы сотрудничать взаимовыгодно с магазинами.Наши цены как на рынке.Мы заинтересованы в экономии ваших денег и времени.Стоимость доставки 150 сом и ещё добавлен для окраину города.При отказе подтвержденного заказа более 2-х раз Клиент заносится в чёрный список!!"</string>
    <string name="to_call">Позвонить</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>
    <string name="phone_number">tel:+77776821251</string>
    <string name="phone_number_whatsapp">+77716821251</string>
    <string name="whatsapp_message">Привет это магазин Эко-Маркет.</string>
    <string name="instagram_profile_name">madlen_kk</string>
    <string name="title_history_order_page">История заказов</string>
    <string name="sum">Сумма</string>
    <string name="make_order_btn">Оформить заказ</string>
    <string name="deliver">Доставка</string>
    <string name="overall">Итого</string>
    <string name="close">Закрыть</string>
    <string name="text_warning_dialog">Заказ может быть при\nпокупке свыше 300 с</string>
    <string name="make_order_title_page">Оформление заказа</string>
    <string name="number_phone">Номер телефона</string>
    <string name="address">Адрес</string>
    <string name="landMark">Ориентир</string>
    <string name="comments">Комментарии</string>
    <string name="sum_of_order">Сумма заказа</string>
    <string name="make_order">Заказать доставку</string>

</resources>