<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/info_page_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_norms_pro_700"
                android:text="@string/app_name"
                android:textColor="@color/dark_black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_norms_pro_400"
                tools:text="@string/info_page_main_text"
                android:textColor="@color/durk_grey"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/ic_call_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="20dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/ic_call"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_phone"
                        android:layout_gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="100dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_call"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/inter_600"
                        android:textSize="16sp"
                        android:textColor="@color/dark_black"
                        app:layout_constraintStart_toEndOf="@id/ic_call"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/ic_whatsapp_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="12dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/ic_whatsapp"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_whatsapp"
                        android:layout_gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="100dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whatsapp"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/inter_600"
                        android:textSize="16sp"
                        android:textColor="@color/dark_black"
                        app:layout_constraintStart_toEndOf="@id/ic_whatsapp"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/ic_instagram_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/light_grey"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="12dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/ic_instagram"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_instagram"
                        android:layout_gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="100dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instagram"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/inter_600"
                        android:textSize="16sp"
                        android:textColor="@color/dark_black"
                        app:layout_constraintStart_toEndOf="@id/ic_instagram"
                        app:layout_constraintTop_toTopOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>




</androidx.core.widget.NestedScrollView>